Correct event handler. Target event id

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
     
 </body>
-    <button>ROCK</button>
-
-    <button>PAPER</button>
-
-    <button>SCISSORS</button>
-
-    <div class = "message">
+    <div id="section">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    
+    <div class="message">
 
     </div>
 
