Update buttons to input with iamge to create picture buttons

--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
 <body>
     
 </body>
+    <div id="title">
+        <h1 id="title">Rock, Paper, Scissors!</h1>
+        <p id="directions">Rock smashes scissors, scissors cut up paper, paper covers rock.</p>
+    </div>
     <div id="section">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <input type="image" id="rock" img src="images/ROCK.jpg" height=250px width=300px>
+        <input type="image" id="paper"img src="images/PAPER.jpg" height=250px width=300px>
+        <input type="image" id="scissors" img src="images/SCISSORS.jpg" height=250px width=300px>
     </div>
     
-    <div class="message">
-
+    <div class = standings>
+        <div id="result"></div>
+        <div id="score"></div>
     </div>
 
 </html>
